<resources>
    <string name="app_name">Yali Learns App</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_leadership">Leadership</string>
    <string name="description_leadership">The Mandela Washington Fellowship Institute courses are adapted from classes and workshops presented by U.S. universities to Fellows.\n\nEach course covers a single topic and provides more in-depth instruction.</string>
    <string name="course_leadership_1">Responsible Leadership on Transparency and Good Governance</string>
    <string name="course_leadership_2">Strategies for Personal Growth and Development</string>
    <string name="course_leadership_3">Workforce Collaboration and Development</string>
    <string name="course_leadership_4">Management Strategies for People and Resources</string>
    <string name="title_focus">Focus On</string>
    <string name="description_focus">Focus On, a new category of YALI Network Online Courses addresses some of the pressing issues facing Africa today, offering insight and positive solutions for young African leaders.</string>
    <string name="course_focus_1">Understanding Renewable Energy</string>
    <string name="course_focus_2">Understanding Human Rights</string>
    <string name="course_focus_3">Understanding the Rights of Women and Girls</string>
    <string name="course_focus_4">Understanding Elections and Civic Responsibility</string>
    <string name="course_focus_5">Understanding Climate Change</string>
    <string name="title_civic">Civic Leadership</string>
    <string name="description_civic" />
    <string name="course_civic_1">Creating and Maintaining Social Enterprises</string>
    <string name="course_civic_2">Community Organizing for Action</string>
    <string name="title_business">Business And Entrepreneurship</string>
    <string name="description_business" />
    <string name="course_business_1">Fundamentals of Starting and Running a Business</string>
    <string name="course_business_2">Fundamentals of Business Expansion</string>
    <string name="title_management">Public Management</string>
    <string name="description_management" />
    <string name="course_management_1">Basics of Public-Private Partnerships</string>
    <string name="course_management_2">Strengthening Public Sector Service</string>
    <string name="title_mandela">Mandela Washington Fellowship Institute Online Courses</string>
    <string name="description_mandela">The Mandela Washington Fellowship Institute courses are adapted from classes and workshops presented by U.S. universities to Fellows.\n\nEach course covers a single topic and provides more in-depth instruction.</string>
    <string name="course_mandela_1">Fundraising Concepts</string>
    <string name="course_mandela_2">Design Driven Entrepreneurship</string>
    <string name="course_mandela_3">Servant Leadership – The Deciding Difference</string>
    <string name="title_activity_lesson">Lesson</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_lesson_1">Lesson 1</string>
    <string name="tab_lesson_2">Lesson 2</string>
    <string name="tab_lesson_3">Lesson 3</string>
    <string name="tab_lesson_4">Lesson 4</string>
    <string name="tab_lesson_5">Lesson 5</string>
    <string name="title_activity_category">Yali Learns App</string>
    <string name="tab_category_leadership">Leadership</string>
    <string name="tab_category_focus">Focus On</string>
    <string name="tab_category_civic">Civic Leadership</string>
    <string name="tab_category_business"><![CDATA[Business & Entrepreneurship]]></string>
    <string name="tab_category_management">Public Management</string>
    <string name="tab_category_mandela">Mandela WFIOC</string>
    <string name="about">With hundreds millions of smartphone in Africa, we think bring all the YALI courses into a mobile application could help us to reach the maximum of persons.\n\nBy the way have a big impact in our community.\n\nThis is an initiative of Houssein, a Mandela Washingthon Fellow of 2016.\n\nSharing is caring, please do not hesitate to share this app around you.\n\nIf you encouter any bug or have some feedbacks, you can contact us by sending an email to milameet@gmail.com</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_transcript">Transcript</string>
    <string name="quiz">Quiz</string>
</resources>
